opam-version: "2.0"
name: "conan"
synopsis: "Identity type of your file (such as the MIME type)"
description: """\
Conan is a re-implementation in OCaml of the file command.
The library is system-agnostic and can be used with MirageOS."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/conan"
doc: "https://dinosaure.github.io/conan/"
bug-reports: "https://github.com/dinosaure/conan/issues"
depends: [
  "ocaml"          {>= "4.08.0"}
  "conan"          {= version}
  "conan-database" {= version}
  "conan-unix"     {= version}
  "dune"           {>= "2.9.0"}
  "dune-site"
  "alcotest"       {with-test}
  "crowbar"        {with-test}
  "fmt"            {with-test}
  "rresult"        {with-test}
]
conflicts: ["ocaml-option-flambda"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "install" "--create-install-files" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/conan.git"
