opam-version: "2.0"
name: "conan"
synopsis: "A database of decision trees to recognize MIME type"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "BSD-2-Clause"
homepage: "https://github.com/dinosaure/conan"
doc: "https://dinosaure.github.io/conan/"
bug-reports: "https://github.com/dinosaure/conan/issues"
depends: [
  "dune"       {>= "2.9.0"}
  "conan"      {= version}
  "alcotest"   {>= "0.8.1" & with-test}
  "crowbar"    {with-test}
  "fmt"        {with-test}
  "rresult"    {>= "0.6" & with-test}
]
conflicts: ["ocaml-option-flambda"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "install" "-p" name "--create-install-files" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/conan.git"
x-maintenance-intent: [ "(latest)" ]
