opam-version: "2.0"
name: "conan"
synopsis: "Identity type of your file (such as the MIME type)"
description: """\
Conan is a re-implementation in OCaml of the file command.
The library is system-agnostic and can be used with MirageOS."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/conan"
doc: "https://dinosaure.github.io/conan/"
bug-reports: "https://github.com/dinosaure/conan/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "re" {>= "1.9.0"}
  "base-unix"
  "stdlib-shims"
  "alcotest" {with-test}
  "dune" {>= "2.9.0"}
  "fmt" {>= "0.8.9"}
  "logs" {>= "0.7.0"}
  "mtime" {>= "1.2.0"}
  "bigstringaf"
  "lwt"
  "uutf"
  "crowbar" {>= "0.2" & with-test}
  "rresult" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/conan.git"
available: [ "%{ocaml-option-afl:enable}" != "enable" ]
