opam-version: "2.0"
name: "conan"
synopsis: "Identify type of your file (such as the MIME type)"
description: """\
Conan is a re-implementation in OCaml of the file command.
The library is system-agnostic and can be used with MirageOS."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "BSD-2-Clause"
homepage: "https://github.com/mirage/conan"
doc: "https://mirage.github.io/conan/"
bug-reports: "https://github.com/mirage/conan/issues"
depends: [
  "ocaml"               {>= "4.08.0"}
  "re"                  {>= "1.9.0"}
  "dune"                {>= "2.9.0"}
  "uutf"
  "ptime"
  "alcotest"            {>= "0.8.1" & with-test}
  "crowbar"             {>= "0.2" & with-test}
  "fmt"                 {with-test}
  "rresult"             {>= "0.6" & with-test}
  "mirage"              {with-test}
  "mirage-unix"         {with-test}
  "mirage-bootvar-unix" {with-test}
  "mirage-console-unix" {with-test}
  "mirage-clock-unix"   {with-test}
  "mirage-logs"         {with-test}
  "mirage-types"        {with-test}
  "mirage-types-lwt"    {with-test}
  "mirage-runtime"      {with-test}
]
conflicts: ["ocaml-option-flambda"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "install" "-p" name "--create-install-files" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/conan.git"
