(dirs :standard database)

(install
 (section
  (site
   (conan-cli database)))
 (files
  database/acorn
  database/adi
  database/adventure
  database/algol68
  database/allegro
  database/alliant
  database/alpha
  database/amanda
  database/amigaos
  database/android
  database/animation
  database/aout
  database/apache
  database/apl
  database/apple
  database/application
  database/applix
  database/apt
  database/archive
  database/asf
  database/assembler
  database/asterix
  database/att3b
  database/audio
  database/basis
  database/beetle
  database/ber
  database/bflt
  database/bhl
  database/bioinformatics
  database/biosig
  database/blackberry
  database/blcr
  database/blender
  database/blit
  database/bout
  database/bsdi
  database/bsi
  database/btsnoop
  database/c64
  database/cad
  database/cafebabe
  database/cbor
  database/cddb
  database/chord
  database/cisco
  database/citrus
  database/c-lang
  database/clarion
  database/claris
  database/clipper
  database/clojure
  database/coff
  database/commands
  database/communications
  database/compress
  database/console
  database/convex
  database/coverage
  database/cracklib
  database/ctags
  database/ctf
  database/cubemap
  database/cups
  database/dact
  database/database
  database/dataone
  database/dbpf
  database/der
  database/diamond
  database/diff
  database/digital
  database/dolby
  database/dump
  database/dyadic
  database/ebml
  database/edid
  database/editors
  database/efi
  database/elf
  database/encore
  database/epoc
  database/erlang
  database/espressif
  database/esri
  database/etf
  database/fcs
  database/filesystems
  database/finger
  database/flash
  database/flif
  database/fonts
  database/forth
  database/fortran
  database/frame
  database/freebsd
  database/fsav
  database/fusecompress
  database/games
  database/gcc
  database/gconv
  database/geo
  database/geos
  database/gimp
  database/git
  database/glibc
  database/gnome
  database/gnu
  database/gnumeric
  database/gpt
  database/gpu
  database/grace
  database/graphviz
  database/gringotts
  database/guile
  database/hardware
  database/hitachi-sh
  database/hp
  database/human68k
  database/ibm370
  database/ibm6000
  database/icc
  database/iff
  database/images
  database/inform
  database/intel
  database/interleaf
  database/island
  database/ispell
  database/isz
  database/java
  database/javascript
  database/jpeg
  database/karma
  database/kde
  database/keepass
  database/kerberos
  database/kicad
  database/kml
  database/lecter
  database/lex
  database/lif
  database/linux
  database/lisp
  database/llvm
  database/lua
  database/luks
  database/m4
  database/mach
  database/macintosh
  database/macos
  database/magic
  database/mail.news
  database/make
  database/map
  database/maple
  database/marc21
  database/mathcad
  database/mathematica
  database/matroska
  database/mcrypt
  database/measure
  database/mercurial
  database/metastore
  database/meteorological
  database/microfocus
  database/mime
  database/mips
  database/mirage
  database/misctools
  database/mkid
  database/mlssa
  database/mmdf
  database/modem
  database/modulefile
  database/motorola
  database/mozilla
  database/msdos
  database/msooxml
  database/msvc
  database/msx
  database/mup
  database/music
  database/nasa
  database/natinst
  database/ncr
  database/neko
  database/netbsd
  database/netscape
  database/netware
  database/news
  database/nitpicker
  database/numpy
  database/oasis
  database/ocaml
  database/octave
  database/ole2compounddocs
  database/olf
  database/openfst
  database/opentimestamps
  database/os2
  database/os400
  database/os9
  database/osf1
  database/palm
  database/parix
  database/parrot
  database/pascal
  database/pbf
  database/pbm
  database/pc88
  database/pc98
  database/pdf
  database/pdp
  database/perl
  database/pgf
  database/pgp
  database/pkgadd
  database/plan9
  database/plus5
  database/pmem
  database/polyml
  database/printer
  database/project
  database/psdbms
  database/psl
  database/pulsar
  database/pwsafe
  database/pyramid
  database/python
  database/qt
  database/revision
  database/riff
  database/rinex
  database/rpi
  database/rpm
  database/rpmsg
  database/rst
  database/rtf
  database/ruby
  database/sc
  database/sccs
  database/scientific
  database/securitycerts
  database/selinux
  database/sendmail
  database/sequent
  database/sereal
  database/sgi
  database/sgml
  database/sharc
  database/sinclair
  database/sisu
  database/sketch
  database/smalltalk
  database/smile
  database/sniffer
  database/softquad
  database/sosi
  database/spec
  database/spectrum
  database/sql
  database/ssh
  database/ssl
  database/sun
  database/symbos
  database/sysex
  database/tcl
  database/teapot
  database/terminfo
  database/tex
  database/tgif
  database/ti-8x
  database/timezone
  database/tplink
  database/troff
  database/tuxedo
  database/typeset
  database/unicode
  database/unknown
  database/uterus
  database/uuencode
  database/vacuum-cleaner
  database/varied.out
  database/varied.script
  database/vax
  database/vicar
  database/virtual
  database/virtutech
  database/visx
  database/vms
  database/vmware
  database/vorbis
  database/vxl
  database/warc
  database/weak
  database/webassembly
  database/windows
  database/wireless
  database/wordprocessors
  database/wsdl
  database/x68000
  database/xdelta
  database/xenix
  database/xilinx
  database/xo65
  database/xwindows
  database/yara
  database/zfs
  database/zilog
  database/zip
  database/zyxel)
 (package conan-cli))
