(include dune.inc)

(rule
 (alias runtest)
 (package conan-database)
 (action
  (diff dune.inc dune.inc.gen)))

(rule
 (target dune.inc.gen)
 (package conan-database)
 (deps
  (:gen generate.ml)
  %{bin:conan.serialize}
  (source_tree ../database))
 (action
  (run %{ocaml} -I +unix %{gen} ../database -o .)))
