(executable
 (name test_file)
 (modules test_file)
 (libraries conan conan.string rresult alcotest))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries conan alcotest))

(rule
 (alias runtest)
 (deps
  (:test test_parser.exe)
  (source_tree ../database))
 (action
  (run %{test} --color=always)))

(cram
 (deps
  (source_tree ../database)
  %{bin:conan.file}
  (package conan)))
