(executable
 (name test_file)
 (modules test_file)
 (libraries conan conan.string rresult alcotest))

(executable
 (name test_light)
 (modules test_light)
 (libraries conan conan.string conan-database.light rresult alcotest))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries conan alcotest))

(rule
 (alias runtest)
 (deps
  (:test test_parser.exe)
  (source_tree ../database))
 (action
  (run %{test} --color=always)))

(cram
 (enabled_if %{arch_sixtyfour})
 (package conan-cli)
 (deps
  (package conan-database)
  (source_tree ../database)
  (source_tree ../unikernel)
  %{bin:conan.file}))

(rule
 (alias runtest)
 (deps
  (:test test_file.exe))
 (action
  (run %{test} --color=always)))

(rule
 (alias runtest)
 (package conan-database)
 (deps
  (:test test_light.exe))
 (action
  (run %{test} --color=always)))
